[metadata]
name = aa-toolbox
version = attr: aatoolbox.__version__
author = Centre for Humanitarian Data Predictive Analytics Team
author_email = centrehumdata@un.org
summary = Toolbox for anticipatory action
description_file = README.md
home_page = https://github.com/OCHA-DAP/pa-aa-toolbox
license = GPLv3
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6, < 3.10
install_requires =
    geopandas
    hdx-python-api>=5.5.8
    numpy
    pydantic
    requests
    pyyaml
    rioxarray
    typing-extensions
    xarray[parallel]

[options.packages.find]
where = src

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build

[flake8]
extend-ignore = SFS301 # Allow f-strings
docstring-convention = numpy
max-pos-args = 2
