[metadata]
name = aa-toolbox
version = attr: aatoolbox.__version__
url = https://github.com/OCHA-DAP/pa-aa-toolbox
project_urls =
    Documentation = https://aa-toolbox.readthedocs.io/en/latest/
    Changes = https://github.com/OCHA-DAP/pa-aa-toolbox/blob/main/CHANGELOG.rst
    PyPI Releases = https://pypi.org/project/aa-toolbox/
    Source Code = https://github.com/OCHA-DAP/pa-aa-toolbox/
    Issue Tracker = https://github.com/OCHA-DAP/pa-aa-toolbox/issues/
license = GPLv3
author = Centre for Humanitarian Data Predictive Analytics Team
author_email = centrehumdata@un.org
description = Toolbox for anticipatory action
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# TODO: split up this list into custom installs
# TODO: Remove importlib requirement once error fixed
#  https://stackoverflow.com/questions/73929564/
#  entrypoints-object-has-no-attribute-get-digital-ocean
install_requires =
    cdsapi
    cfgrib
    cftime
    geopandas
    hdx-python-api>=5.6.2
    hdx-python-country
    importlib-metadata==4.13.0;python_version=='3.7'
    netCDF4
    numpy
    pydantic
    python-dateutil
    pyyaml
    requests
    rasterio
    rioxarray
    typing-extensions
    wrapt
    xarray[parallel]

[options.packages.find]
where = src

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build

[flake8]
extend-ignore = SFS301 # Allow f-strings
docstring-convention = numpy
max-pos-args = 2
